# Realtime-Data-Streaming

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
Jobs/: consume_data.py  ingest_data.ipynb  ingest_data.py  ingest_data_aggregate.py  produce_data.py
dags/: kafka_stream.py  source_data.py
