[tool.poetry]
name = "realtime-data-streaming"
version = "0.1.0"
description = ""
authors = ["HsiuChuanHsu <hchsu2106@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
install = "^1.3.5"
datetime = "^5.5"
kafka-python = "^2.0.2"
confluent-kafka = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
